Fix tags usage in the databases view
