# docs/swagger.json
@@ -4,6 +4,23 @@
         "contact": {}
     },
     "paths": {
+        "/api/clusters/{id}/results": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get a specific cluster's check results",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/clusters/{id}/tags": {
             "post": {
                 "consumes": [
@@ -82,6 +99,106 @@
                         "type": "string",
                         "description": "Cluster id",
                         "name": "cluster",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Tag",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/databases/{id}/tags": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Add tag to a HANA database",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Database id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "The tag to create",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/web.JSONTag"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/web.JSONTag"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/databases/{name}/tags/{tag}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete a specific tag that belongs to a HANA database",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Database id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -281,7 +398,7 @@
                     {
                         "type": "string",
                         "description": "SAPSystem id",
-                        "name": "cluster",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
